--- a/client/src/components/Footer/style.scss
+++ b/client/src/components/Footer/style.scss
@@ -13,7 +13,8 @@
   align-items: center;
 }
 
-button {
-  height: 20px;
-  margin: 20px;
+.footerButton {
+  height: 30px;
+  margin: 30px;
+  color: white;
 }
