--- a/client/src/styles/reset.scss
+++ b/client/src/styles/reset.scss
@@ -120,10 +120,13 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
+  content: "";
   content: none;
 }
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+button {
+  border: 0;
 }
