--- a/client/src/pages/Main/style.scss
+++ b/client/src/pages/Main/style.scss
@@ -1,8 +1,20 @@
-.closeButton {
-  position: fixed;
-  bottom: 30px;
-}
-
 .board-components-wrapper {
   margin: 0 30px;
+}
+
+.open-button {
+  position: fixed;
+  bottom: 100px;
+  right: 50px;
+  padding: 20px;
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #bd420d;
+  &::before {
+    content: "+";
+  }
 }
