--- a/client/src/pages/Category/style.scss
+++ b/client/src/pages/Category/style.scss
@@ -1,2 +1,7 @@
 .category-page {
+  & > .category-list {
+    margin-top: 25px;
+    margin: 25px 20px 0px;
+  }
+  margin-bottom: 40px; // footer만큼 띄우기
 }
