--- a/client/src/pages/Category/style.scss
+++ b/client/src/pages/Category/style.scss
@@ -3,5 +3,5 @@
     margin-top: 25px;
     margin: 25px 20px 0px;
   }
-  margin-bottom: 40px; // footer만큼 띄우기
+  margin-bottom: 50px; // footer + 10px만큼 띄우기
 }
