--- a/client/src/components/Write/style.scss
+++ b/client/src/components/Write/style.scss
@@ -1,15 +1,17 @@
 .write {
   position: fixed;
-  left: calc(50% - 45%);
-  top: calc(50% - 40%);
-  width: 90%;
-  height: 80%;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 
-  background-color: #c4c4c4;
+  background-color: rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  z-index: 1100;
 }
 
 .inputs-wrapper {
