--- a/client/src/components/Header/style.scss
+++ b/client/src/components/Header/style.scss
@@ -1,8 +1,14 @@
 .header {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
 
   height: 60px;
   background-color: #c4c4c4;
+
+  > .dropdown {
+    position: absolute;
+    right: 10px;
+  }
 }
